--- a/main.css
+++ b/main.css
@@ -148,15 +148,45 @@ main section {
 
 .numbers {
   color: black;
+  font-weight: bold;
 }
 
 .numbers-in {
   color: #303b59;
+  font-weight: normal;
 }
 
 .pill {
   padding: 16.5px 40px;
   border-radius: 10px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.pill,
+.pills {
+  width: 315px;
+}
+
+@media only screen and (max-width: 450px) {
+  main {
+    height: 100vh;
+    width: auto;
+    flex-direction: column;
+  }
+  .result-card,
+  .summary-card {
+    width: 100%;
+    padding: 24px;
+  }
+  .result-card {
+    border-radius: 0 0 15px 15px;
+  }
+  h3 {
+    font-family: "Hanken Grotesk";
+    font-size: 18px;
+    line-height: 130%;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
